# icloud-album-parser

./: .gitignore  Cargo.toml  README.md  issues.md  output.txt  prompt_plan.md  spec.md
.github/workflows/: rust-docs.yml  rust-fmt.yml  rust-lint.yml  rust-test.yml
examples/: album_info.rs  api_tests.rs  download_photos.rs  fetch_album.rs  integration_tests.rs  mockito_standalone.rs  redirect_tests.rs  static_tests.rs
scripts/: run_all_tests.sh
src/: api.rs  base_url.rs  enrich.rs  lib.rs  main.rs  models.rs  redirect.rs  utils.rs
tests/: api_test.rs  base_url_test.rs  basic_test.rs  enrich_test.rs  integration_test.rs  models_test.rs  real_world_test.rs  redirect_test.rs  run_all_tests.rs  utils_test.rs
