[package]
name = "icloud-album-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust library for interacting with iCloud shared albums"
license = "MIT"
repository = "https://github.com/harperreed/icloud-album-parser"
readme = "README.md"
keywords = ["icloud", "photos", "parser"]
categories = ["web-programming::http-client", "parsing"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
mockito = "1.2"
