[package]
name = "icloud-album-rs"
version = "0.4.0"
edition = "2021"
description = "A Rust library for interacting with iCloud shared albums"
license = "MIT"
repository = "https://github.com/harperreed/icloud-album-parser"
readme = "README.md"
keywords = ["icloud", "photos", "parser"]
categories = ["web-programming::http-client", "parsing"]

# Explicitly define this as a library-only crate
[lib]
name = "icloud_album_rs"
path = "src/lib.rs"

# Add examples for testing
[[example]]
name = "api_tests"
path = "examples/api_tests.rs"

[[example]]
name = "redirect_tests"
path = "examples/redirect_tests.rs"

[[example]]
name = "integration_tests"
path = "examples/integration_tests.rs"

[[example]]
name = "mockito_standalone"
path = "examples/mockito_standalone.rs"

[[example]]
name = "static_tests"
path = "examples/static_tests.rs"

[dependencies]
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime_guess = "2.0"
thiserror = "1.0"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "test-util",
    "sync",
    "fs",
    "io-util",
] }
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
mockito = "1.2"
